quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__new_token.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: frames
---
[
    NewToken(
        NewToken {
            token: [
                104,
                101,
                108,
                108,
                111,
            ],
        },
    ),
    Padding(
        Padding {
            length: 1,
        },
    ),
]
