quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__padding.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: frames
---
[
    Padding(
        Padding {
            length: 4,
        },
    ),
    Ping(
        Ping,
    ),
    Padding(
        Padding {
            length: 3,
        },
    ),
]
