quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__path_challenge.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: frames
---
[
    PathChallenge(
        PathChallenge {
            data: [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
            ],
        },
    ),
    Padding(
        Padding {
            length: 1,
        },
    ),
]
