quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__ping.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: frames
---
[
    Ping(
        Ping,
    ),
]
