quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__retire_connection_id.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: values

---
[
    RetireConnectionId(
        RetireConnectionId {
            sequence_number: VarInt(
                1,
            ),
        },
    ),
]
