quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__stop_sending.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: frames
---
[
    StopSending(
        StopSending {
            stream_id: VarInt(
                1,
            ),
            application_error_code: VarInt(
                2,
            ),
        },
    ),
]
