quic/s2n-quic-core/src/frame/snapshots/s2n_quic_core__frame__snapshots__stream_data_blocked.snap
---
source: quic/s2n-quic-core/src/frame/mod.rs
expression: frames
---
[
    StreamDataBlocked(
        StreamDataBlocked {
            stream_id: VarInt(
                1,
            ),
            stream_data_limit: VarInt(
                2,
            ),
        },
    ),
]
